# csci711-raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aabb.h  camera.cpp  camera.h  checker_mat.cpp  checker_mat.h  cube.fbx  finklestein.fbx  kd_tree.h  light.h  material.h  mesh.cpp  mesh.h  object.h  phong_color_mat.cpp  phong_color_mat.h  phong_mat.cpp  phong_mat.h  photon.h  ray.h  raytracer.cpp  sphere.cpp  sphere.h  texture_mat.cpp  texture_mat.h  triangle.cpp  triangle.h  util.cpp  util.h  vcpkg.json  world.cpp  world.h
